# llm_adversarial_rewriters

./: .gitignore  README.MD  README.md  download.sh  pyproject.toml  requirements.txt  run.sh  run_eval.py  run_inference.py
src/: agent.py  algo.yaml  algorithms.py  eval.py
src/utils/: reporter.py  runtime_few_shot.py  select_few_shots.py  statistics.py  trial_manager.py
train/: train.md
train/dpo/: dpo.yaml  make_dpo_data.py  run_dpo.py
train/sft/: cfg_qlora_sft.yaml  make_sft_data.py  qlora_sft.py
